--- a/src/app/shared/components/rating-stars/rating-stars.html
+++ b/src/app/shared/components/rating-stars/rating-stars.html
@@ -7,7 +7,13 @@
   (mouseleave)="onMouseLeave()"
 >
   <div class="stars-container">
-    <div *ngFor="let star of getStars(); let i = index" class="star">
+    <div 
+      *ngFor="let star of getStars(); let i = index" 
+      class="star"
+      [class.readonly]="readonly"
+      (click)="onStarClick(i, $event)"
+      (mousemove)="onStarHover(i, $event)"
+    >
       <!-- Fondo (estrella vacía) -->
       <svg class="star-bg" viewBox="0 0 24 24" fill="none">
         <path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" fill="#404040"/>
@@ -26,10 +32,6 @@
         </defs>
         <path [attr.clip-path]="'url(#half-clip-' + i + ')'" d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" fill="#ffd700"/>
       </svg>
-      
-      <!-- Áreas de click invisibles -->
-      <div class="click-area click-left" (click)="onStarClick(i, true)" (mouseenter)="onStarHover(i, true)"></div>
-      <div class="click-area click-right" (click)="onStarClick(i, false)" (mouseenter)="onStarHover(i, false)"></div>
     </div>
   </div>
   
