--- a/src/app/features/movies/pages/detail/detail.html
+++ b/src/app/features/movies/pages/detail/detail.html
@@ -25,10 +25,6 @@
           <span class="year">{{ movie.release_date.substring(0, 4) }}</span>
           <span class="separator">•</span>
           <span class="runtime">{{ getRuntime(movie.runtime) }}</span>
-          <span class="separator">•</span>
-          <span class="rating" [style.color]="getRatingColor(movie.vote_average)">
-            ⭐ {{ movie.vote_average.toFixed(1) }}
-          </span>
         </div>
 
         <div class="genres">
@@ -207,7 +203,7 @@
           class="btn btn-primary"
           (click)="openReviewForm()"
         >
-          ✍️ Escribir Reseña
+           Escribir Reseña
         </button>
       </div>
 
